
Fixed: Issue #586: HTTP protocol test: Support URL string as custom request to allow monitoring
HTTP proxy. Example for testing Squid:
  if failed port 3128 protocol http request "cache_object://localhost/utilization" then alert

Fixed: Issue #588: If the connection or ping test repetition is set, log partial failures
with warning priority instead of error.

Fixed: The connection test retry option was broken and performed always one test with no retry on
error.

Fixed: HTTP protocol test: The "Connection: close" HTTP header was always included even if
it was part of the custom HTTP headers list.

Fixed: Linux: Subtract ZFS ARC size from the system memory usage.

Fixed: If the SSL test connection failed and certificate validity test was active,
monit returned confusing certificate validity error. The test is now skipped in such
case as it can be performed only if the certificate can be read.

Fixed: The certificate validity test and checksum test didn't work for self-signed
certificates if such certificates were allowed.


Version 5.21.0

New: The filesystem read/write statistics is now displayed in Monit GUI and CLI. Tests:
    check filesystem myfs with path /dev/sda1
        if read rate > 1 MB/s for 5 cycles then alert
        if read rate > 500 operations/s for 5 cycles then alert
        if write rate > 1 MB/s for 5 cycles then alert
        if write rate > 500 operations/s for 5 cycles then alert
        if service time > 10 milliseconds for 3 times within 5 cycles then alert

New: The per-process read/write statistics is now displayed in Monit GUI and CLI. The available
statistics depends on platform.
Example for Linux and MacOS:
    check process myprocess matching "myprocess"
        if disk read > 500 kb/s for 10 cycles then alert
        if disk write > 500 kb/s for 10 cycles then alert
Example for AIX, DragonFlyBSD, FreeBSD, NetBSD, OpenBSD and Solaris:
    check process myprocess matching "myprocess"