@@ -42,6 +42,8 @@ HTTP proxy. Example for testing Squid:
 Fixed: Issue #588: If the connection or ping test repetition is set, log partial failures
 with warning priority instead of error.
 
+Fixed: Support compilation with OpenSSL 1.1.0 that was compiled with no-deprecated option.
+
 Fixed: The connection test retry option was broken and performed always one test with no retry on
 error.
 
